# db-playmate

./: .gitignore  README.rst  build_package.sh  config.toml  db-playmate.py  db-playmate.spec  pyproject.toml
.circleci/: config.yml
.github/: labeler.yml
.github/workflows/: main.yml  push.yml
db_playmate/: __init__.py  box.py  bridge.py  cli.py  configure.py  constants.py  data_model.py  databrary.py  datavyu.py  frontend.py  kobo.py  koboform.py  opf.py  process_queue.py  sheets.py
db_playmate/kobo/: __init__.py  form.py  kobo.py  question.py  submission.py
db_playmate/templates/: config.html  index.html  index2.html  loading.html
icon/: PLAY-logo.icns
scripts/: cmdline.py
templates/: index.html
tests/: conftest.py  test_db_playmate.py  test_kobo.py
