[tool.poetry]
name = "db-playmate"
version = "0.1.0"
description = "Client scripts for Databrary PLAY project."
authors = ["Shohan Hasan <shohan.hasan.x6@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
boxsdk = "^2.6"
PyJWT = "^1.7"
toml = "^0.10.0"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
